Minor fix in module04 videos

--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -12,8 +12,7 @@ knit: (function(inputFile, encoding) {
 #### M04-V01. Frequency counts
 
 + PowerPoint presentation available in [Panopto format][m04v01] (5 minutes)
-+ Slides and speaker notes available in [pdf format][git1]
-+ SAS program used in these videos in [text format][git2]
++ Slides and speaker notes available in [pdf format][git1] and [pptx format][git2]
 
 #### M04-V02. Convert string to numeric
 
@@ -50,7 +49,7 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 <!---my git--->
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m04-5507-simon-slides-and-speaker-notes.pdf
-[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m04-5507-simon-categorical-variables.sas
+[git21]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m04-5507-simon-slides-and-speaker-notes.pptx
 
 [m04v01]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=746cc8d9-c4f9-42ea-a043-ad640159e272
 [m04v02]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3877b83b-33ec-4550-8e62-ad64015b9b0b
