Third minor fix

--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -9,33 +9,33 @@ knit: (function(inputFile, encoding) {
 
 ### Videos and handouts, Module04 (Total time: 49 minutes)
 
-#### M04-V01. Frequency counts
+M04-V01. Frequency counts
 
 + PowerPoint presentation available in [Panopto format][m04v01] (5 minutes)
 + Slides and speaker notes available in [pdf format][git1] and [pptx format][git2]
 
-#### M04-V02. Convert string to numeric
+M04-V02. Convert string to numeric
 
 + PowerPoint presentation available in [Panopto format][m04v02] (5 minutes)
 + See above for slides and speaker notes
 
-#### M04-V03. Labels for number codes
+M04-V03. Labels for number codes
 + PowerPoint presentation available in [Panopto format][m04v03] (4 minutes)
 + See above for slides and speaker notes
 
-#### M04-V04. Drawing bar charts
+M04-V04. Drawing bar charts
 + PowerPoint presentation available in [Panopto format][m04v04] (7 minutes)
 + See above for slides and speaker notes
 
-#### M04-V05. Converting continuous to categorical
+M04-V05. Converting continuous to categorical
 + PowerPoint presentation available in [Panopto format][m04v05] (11 minutes)
 + See above for slides and speaker notes
 
-#### M04-V06. Modifying categorical variables
+M04-V06. Modifying categorical variables
 + PowerPoint presentation available in [Panopto format][m04v06] (4 minutes)
 + See above for slides and speaker notes
 
-#### M04-V07. Crosstabulations
+M04-V07. Crosstabulations
 + PowerPoint presentation available in [Panopto format][m04v07] (13 minutes)
 + See above for slides and speaker notes
 
