--- a/modules/5507-05-videos.md
+++ b/modules/5507-05-videos.md
@@ -7,40 +7,45 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module05
+### Videos and handouts, Module05 (Total time: 16 minutes)
 
 #### M05-V01. Means and frequency counts
 
-+ Video available in [Panopto format][m05v01]
-+ Slides and speaker notes available in [pdf format][git1]
-+ SAS program used in these videos in [text format][git2]
++ Video available in [Panopto format][m05v01] (4 minutes)
++ Slides and speaker notes available in [pdf format][git1] and [pptx format][git2]
 
 #### M05-V02. Correlations and scatterplots
 
-+ Video available in [Panopto format][m05v02]
++ Video available in [Panopto format][m05v02] (3 minutes)
 + See above for slides and speaker notes
 
 #### M05-V03. Boxplots
 
-+ Video available in [Panopto format][m05v03]
++ Video available in [Panopto format][m05v03] (3 minutes)
 + See above for slides and speaker notes
 
 #### M05-V04. Means by group
 
-+ Video available in [Panopto format][m05v04]
++ Video available in [Panopto format][m05v04] (2 minutes)
 + See above for slides and speaker notes
 
 #### M05-V05. Investigating an odd association
 
-+ Video available in [Panopto format][m05v05]
++ Video available in [Panopto format][m05v05] (4 minutes)
 + See above for slides and speaker notes
 
-Here are links to [other important files][readme] on my github site.
+<!---my git--->
+This information is available both in Canvas and on [my github site][thisf].
 
-[readme]: https://github.com/pmean/introduction-to-SAS/blob/master/README.md
+If there is a discrepancy, the Canvas site takes precedence. The [readme.md file][mygit] on my github site has links to other important files for this class.
 
-[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m05-5507-slides-and-speaker-notes.pdf
-[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m05-working-with-mix-of-variables.sas
+[thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-05-videos.md
+[mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
+<!---my git--->
+
+
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/5507-05-simon-slides-and-speaker-notes.pdf
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/results/5507-05-simon-slides-and-speaker-notes.pptx
 
 [m05v01]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=73345cc2-e7cc-440b-82d8-ad6a01069061
 [m05v02]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f22f408-d33e-4740-a1d1-ad6a01081402
