Reformat 5507-05-videos.md

--- a/modules/5507-05-videos.md
+++ b/modules/5507-05-videos.md
@@ -7,29 +7,29 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module05 (Total time: 16 minutes)
+#### Videos and handouts, Module05 (Total time: 16 minutes)
 
-#### M05-V01. Means and frequency counts
+M05-V01. Means and frequency counts
 
 + Video available in [Panopto format][m05v01] (4 minutes)
 + Slides and speaker notes available in [pdf format][git1] and [pptx format][git2]
 
-#### M05-V02. Correlations and scatterplots
+M05-V02. Correlations and scatterplots
 
 + Video available in [Panopto format][m05v02] (3 minutes)
 + See above for slides and speaker notes
 
-#### M05-V03. Boxplots
+M05-V03. Boxplots
 
 + Video available in [Panopto format][m05v03] (3 minutes)
 + See above for slides and speaker notes
 
-#### M05-V04. Means by group
+M05-V04. Means by group
 
 + Video available in [Panopto format][m05v04] (2 minutes)
 + See above for slides and speaker notes
 
-#### M05-V05. Investigating an odd association
+M05-V05. Investigating an odd association
 
 + Video available in [Panopto format][m05v05] (4 minutes)
 + See above for slides and speaker notes
