--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -7,52 +7,52 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Videos and handouts, Module06
+#### Videos and handouts, Module06
 
-#### GCP-V01. Good computing practices, Part 1, 23 minutes
+GCP-V01. Good computing practices, Part 1, 23 minutes
 
-+ Video available in [Panopto format][gcp1]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp1]
++ Slides and speaker notes available.in [pdf format][git1] or [pptx format][git2]
 
-#### GCP-V02. Good computing practices, Part 2, 13 minutes
+GCP-V02. Good computing practices, Part 2, 13 minutes
 
-+ Video available in [Panopto format][gcp2]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp2]
++ See above for slides and speaker notes.
 
-#### GCP-V03. Good computing practices, Part 3, 11 minutes
+GCP-V03. Good computing practices, Part 3, 11 minutes
 
-+ Video available in [Panopto format][gcp3]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp3]
++ See above for slides and speaker notes.
 
-#### GCP-V04. Good computing practices, Part 4, 8 minutes
+GCP-V04. Good computing practices, Part 4, 8 minutes
 
-+ Video available in [Panopto format][gcp4]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp4]
++ See above for slides and speaker notes.
 
-#### GCP-V05. Good computing practices, Part 5, 11 minutes
+GCP-V05. Good computing practices, Part 5, 11 minutes
 
-+ Video available in [Panopto format][gcp5]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp5]
++ See above for slides and speaker notes.
 
-#### GCP-V06. Good computing practices, Part 6, 20 minutes
+GCP-V06. Good computing practices, Part 6, 20 minutes
 
-+ Video available in [Panopto format][gcp6]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp6]
++ See above for slides and speaker notes.
 
-#### GCP-V07. Good computing practices, Part 7, 14 minutes
+GCP-V07. Good computing practices, Part 7, 14 minutes
 
-+ Video available in [Panopto format][gcp7]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp7]
++ See above for slides and speaker notes.
 
-#### GCP-V08. Documentation header, 20 minutes
+GCP-V08. Documentation header, 20 minutes
 
-+ Video available in [Panopto format][gcp8]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp8]
++ Slides and speaker notes available.in [pdf format][git3] or [pptx format][git4]
 
-#### GCP-V09. Data dictionary, 7 minutes
+GCP-V09. Data dictionary, 7 minutes
 
-+ Video available in [Panopto format][gcp9]
-+ Slides not yet available.
++ Powerpoint presentation available in [Panopto format][gcp9]
++ Slides and speaker notes available.in [pdf format][git5] or [pptx format][git6]
 
 <!---my git--->
 This information is available both in Canvas and on [my github site][thisf].
@@ -62,6 +62,13 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 [thisf]: https://github.com/pmean/introduction-to-sas/blob/master/modules/5507-06-videos.md
 [mygit]: https://github.com/pmean/introduction-to-sas/blob/master/README.md
 <!---my git--->
+
+[git1]: https://github.com/pmean/classes/blob/master/software-engineering/results/good-documentation.pdf
+[git2]: https://github.com/pmean/classes/blob/master/software-engineering/results/good-documentation.pptx
+[git3]: https://github.com/pmean/classes/blob/master/software-engineering/results/good-documentation.pdf
+[git4]: https://github.com/pmean/classes/blob/master/software-engineering/results/good-documentation.pptx
+[git5]: https://github.com/pmean/classes/blob/master/software-engineering/results/data-dictonary.pdf
+[git6]: https://github.com/pmean/classes/blob/master/software-engineering/results/data-dictonary.pptx
 
 [gcp1]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
 [gcp2]: https://umsystem.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
