--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -15,7 +15,7 @@ Graded: 20 points, one point deducted if submitted late.
 
 The Gardasil vaccine requires three shots in order to be effective. A study conducted at Johns Hopkins looked at how often patients failed to get all three shots. They wanted to see if insurance status, age, and other factors could predict who was at greatest risk for failing to get all three shots.
 
-The data set is available as a comma separated file with variable names in the first row. It is available on [my github site][git1]. You can find details about the dataset on the [data repository for the Journal of Statistics Education][jse1].
+The data set is available as a comma separated file with variable names in the first row. It is available on [my github site][git1]. You can also find a data dictionary on [my github site][git2]. You can find details about the dataset on the [data repository for the Journal of Statistics Education][jse1].
 
 Q1. Display frequency counts for AgeGroup, Race, Completed, Location. Be sure to use proc format to display your frequencies using short text descriptors rather than number codes. Which category occurs most frequently for each variable?
 
@@ -52,4 +52,5 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 <!---my git--->
 
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/gardasil.csv
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/data/gardasil-data-dictionary.yaml
 [jse1]: http://jse.amstat.org/v19n1/gardasil.txt
