Added grading rubric link to hw4 and hw5

--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -27,6 +27,8 @@ Q4. Use a crosstabulation to compare Age to AgeGroup. Hint: use Age as the rows 
 
 Q5. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations. What location had the greatest proportion of non-white patients? Hint: use the new white/non-white variable as the columns and compute row percents.
 
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git5].
+
 #### Discuss04
 
 Graded: 3 points, one point deduction if submitted after the deadline.
@@ -53,4 +55,7 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/gardasil.csv
 [git2]: https://github.com/pmean/introduction-to-SAS/blob/master/data/gardasil-data-dictionary.yaml
+
+[git5]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
+
 [jse1]: http://jse.amstat.org/v19n1/gardasil.txt
