--- a/modules/5507-05-hw.md
+++ b/modules/5507-05-hw.md
@@ -21,7 +21,7 @@ Q3. Evaluate the relationship between CUST and SQFT using a boxplot. Do custom b
 
 Q4. Are custom built houses more likely to appear on corner lots? Calculate the percentages. Hint: use COR as the rows, CUST as the columns, and display row percentages.
 
-Place both the code and the output in a single PDF file.
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git5].
 
 #### Discuss05
 
@@ -51,5 +51,9 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 <!---my git--->
 
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/housing.txt
+
+[git5]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
+
+
 [sim1]: http://www.pmean.com/00files/housing.htm
 
