--- a/modules/5507-05-hw.md
+++ b/modules/5507-05-hw.md
@@ -11,15 +11,15 @@ knit: (function(inputFile, encoding) {
 
 #### Hw05
 
-Your homework assignment will use a [data set][git1] of housing prices and factors that influence the price. I originally found this data set on the DASL web site, but it has disappeared on me. A nice description of this file is on [my own website][sim1]. Add variable labels for all the variables and create value labels for the categorical variables (NE, CUST, and COR).
+Your homework assignment will use a [data set][git1] of housing prices and factors that influence the price. I originally found this data set on the DASL web site, but it has disappeared on me. Please refer to the [data dictionary][git2] for this file. A nice description of this file is on [my own website][sim1], but please note that the names of the variables are different for this description. Create value labels for the categorical variables.
 
 Q1. Do any of the variables have missing values? How many?
 
-Q2. Calculate the mean and standard deviation for the two levels of CUST. How much more do custom built houses cost on average?
+Q2. Calculate the mean and standard deviation for the custom-built versus normal houses. Use formats to label the number codes. How much more do custom built houses cost on average?
 
-Q3. Evaluate the relationship between CUST and SQFT using a boxplot. Do custom built houses tend to be bigger?
+Q3. Evaluate the relationship between custom_build and sqft using a boxplot. Use formats again. Do custom built houses tend to be bigger?
 
-Q4. Are custom built houses more likely to appear on corner lots? Calculate the percentages. Hint: use COR as the rows, CUST as the columns, and display row percentages.
+Q4. Are custom built houses more likely to appear on corner lots? Calculate the percentages. Hint: place the corner lot variable as the rows and display row percentages. Use formats for both variables.
 
 Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git5].
 
@@ -51,6 +51,7 @@ If there is a discrepancy, the Canvas site takes precedence. The [readme.md file
 <!---my git--->
 
 [git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/housing.txt
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/data/housing-data-dictionary.yaml
 
 [git5]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
 
