--- a/src/5507-01-simon-sildes-and-speaker-notes.Rmd
+++ b/src/5507-01-simon-sildes-and-speaker-notes.Rmd
@@ -2,7 +2,9 @@
 title: "Course Introduction"
 author: "Steve Simon"
 date: "Created 2018-07-24"
-output: powerpoint_presentation
+output: 
+  powerpoint_presentation: 
+    reference_doc: ../results/wide-screen-template.pptx
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
   output_dir = "../results", output_format = "all") })  
@@ -130,29 +132,31 @@ My course is currently under development in Canvas. This is the instructors view
 
 ### Where can you get SAS
 
++ SAS OnDemand for Academics (SODA)
 + On your UMKC computer
   + Desktop, hard-wired to UMKC network
   + No laptops, no home computers
++ UMKC Student labs
+  + Royall Hall 303, Lab #17 and #38
 + UMKC Remote Labs
-  + Several locations on campus
-  + Remote access
 + Alternatives not covered in this class
   + SAS University
-  + SAS OnDemand for Academics
   + Jupyter lab
-  + SASMarkdown, StatWeave
+  + SASMarkdown. StatWeave
 
 <div class="notes">[[Speaker notes]]
 
 There are several ways that you can get access to SAS software. One of these three options should work for you.
 
-You can get it running on your UMKC computer, and I will show you how to do this. You can also access SAS on the UMKC Remote Labs. I'll also show this.
+The recommended option is SAS OnDemand for Academics. This version of SAS runs in the cloud. It is restricted to educational uses only.
+
+You can get it running on your UMKC computer, and I will show you how to do this.
+
+You can also access SAS on the UMKC Remote Labs. I'll also show this.
 
 There are some alternatives which I will not show, but if you are interested in investigating, let me know. I am glad to talk privately with anyone about this.
 
 There is a very nice product that I have used in the past called SAS University. It is very difficult to install, but once you have it running, it is very easy to use.
-
-SAS Institute is phasing out SAS University in favor of SAS OnDemand for Academics. This looks like it is much easier to install, though it does require the instructor (me) to set up a few things first. I started work on this, but do not have anything ready yet for this class. Sorry!
 
 If anyone is a fan of Jupyter, you should note that Jupyter lab can run SAS code. You probably need to have SAS already running on your computer, and I have not had time to experiment with this. 
 
@@ -166,7 +170,7 @@ If you are familiar with the R programming environment, there are a couple of pa
 
 <div class="notes">[[Speaker notes]]
 
-This screenshot may be too small for you to read, but you can find the proper link on the recommended readings list for this week on the Canvas website. SAS works for any desktop computer on the UMKC campus. But it has to be hard-wired to the UMKC netwok. By hard-wired, I mean that there is an ethernet cable connecting your computer to a socket on the wall.
+This screenshot may be too small for you to read, but you can find the proper link on the recommended readings list for this week on the Canvas website. SAS works for any desktop computer on the UMKC campus. But it has to be hard-wired to the UMKC network. By hard-wired, I mean that there is an ethernet cable connecting your computer to a socket on the wall.
 
 If you are fortunate enough to have access to a hard-wired computer, you can get SAS installed easily. Someone else will do it for you. It may already be sitting on your computer.
 
@@ -180,9 +184,132 @@ With a very few rare exceptions, you cannot get UMKC to load SAS on a laptop com
 
 <div class="notes">[[Speaker notes]]
 
-You can also run SAS through the UMKC Remote Labs. It should run fine on most browsers, though it can be a bit fussy. 
+You can also run SAS through the UMKC Remote Labs. It should run fine on most browsers, though it can be a bit fussy.
 
 </div>
+
+### SODA login page
+
+![Screenshot of SODA login page](../images/m01-soda-login.png)
+
+<div class="notes">[[Speaker notes]]
+
+Here is the login page for SAS OnDemand for Academics. If you have used SAS a lot in the past, you may already have a SAS profile sign-in. More likely, you do not have such an account. You set it up by clicking on the "Don't have a SAS Profile?" link.
+
+</div>
+
+### SODA create profile (1 of 2)
+
+![Screenshot of First Time Visitor dialog box](../images/m01-soda-profile-01.png)
+
+<div class="notes">[[Speaker notes]]
+
+SAS guides you through the process fairly nicely. Read this dialog box. In particular, note that the profile by itself is not enough. You will still have to register for SAS OnDemand for Academics once the profile is created.
+
+</div>
+
+### SODA create profile (2 of 2)
+
+![Screenshot of First Time Visitor dialog box](../images/m01-soda-profile-02.png)
+
+<div class="notes">[[Speaker notes]]
+
+I won't take you through all of the steps, but SAS is not asking for a lot of information. Note the box at the bottom of the screen (not shown in this screenshot) that asks if you want to get promotional emails from SAS Institute. It's easy enough to say "Yes" here and then unsubscribe later if you find the emails are not worth the trouble. Or you can say "No" right away if you prefer.
+
+</div>
+
+### SODA dashboard (1 of 2)
+
+![Screenshot of SODA dashboard](../images/m01-soda-dashboard.png)
+
+<div class="notes">[[Speaker notes]]
+
+This is the SAS OnDemand Dashboard. It offers two options, SAS Studio and a Python interface to SAS. I have not used the Python interface, but I'm sure it is pretty simple for someone already experienced with Python.
+
+The top of the page has links to Planned Events and Notices. Beneath that are links to Applications, Enrollments, and Courses.
+
+To load SAS Studio, click on the top link.
+
+</div>
+
+
+### SODA enrollments
+
+![Screenshot of SODA enrollments page](../images/m01-soda-enrollments.png)
+
+<div class="notes">[[Speaker notes]]
+
+The enrollments page allows you to "enroll" in my class. This isn't really needed. It adds a folder with all the data files that I use in this class, but you could also get these from my github site.
+
+</div>
+
+### SODA dashboard (2 of 2)
+
+![Screenshot of SODA dashboard](../images/m01-soda-dashboard.png)
+
+<div class="notes">[[Speaker notes]]
+
+Go back to the dashboard by clicking on the Applications link. To load SAS Studio, click on SAS Studio link.
+
+</div>
+
+### SODA studio (1 of 3)
+
+![Screenshot of SODA dashboard](../images/m01-soda-studio-01.png)
+
+<div class="notes">[[Speaker notes]]
+
+This is what SAS Studio looks like. The first thing you should do is to create a directory structure.
+
+</div>
+
+### SODA studio (2 of 3)
+
+![Screenshot of SODA dashboard](../images/m01-soda-studio-02.png)
+
+<div class="notes">[[Speaker notes]]
+
+Click on the leftmost icon beneath "Server Files and Folders".
+
+Create three directories: data, results, and src.
+
+</div>
+
+### SODA studio (3 of 3)
+
+![Screenshot of SODA dashboard](../images/m01-soda-studio-03.png)
+
+<div class="notes">[[Speaker notes]]
+
+Create three directories: data, results, and src.
+
+There are some folders already in there from SAS, my_shared_file_links, sasuser.v94, and student-files. Don't worry about these folders for now.
+
+</div>
+
+### Directory structure
+
++ One directory for the entire class
+  + Possibly one directory for each module
++ Subdirectory structure
+  + src
+  + results
+  + data
+  + others?
+    + images
+    + doc
+    
+<div class="notes">
+
+Make sure you store things consistently. This part of the requirements for this class.
+
+Store all your programs for this class in a single directory. You can call it "sas" or "5507" or anything you like. Some people may prefer to create a separate directory for each module in this class. That's fine also.
+
+Most importantly, create three subdirectories, src, results, and data. Store your programs in src, your output in results and your raw and intermediate datasets in data. You may wish to create other subdirectories, such an images folder for any graphs you produce, a doc folder for any documentation you collect, but the three imporant subdirectory folders are src, results, and data.
+
+</div>
+
+
 
 ### Break #2
 
@@ -191,72 +318,9 @@ You can also run SAS through the UMKC Remote Labs. It should run fine on most br
 + What's coming next
   + Your first SAS program
 
-### Opening screen - SAS commercial version
+### SAS program editor
 
-
-![Opening screen of SAS with multiple windows](../images/opening-screen.png)
-
-
-<div class="notes">[[Speaker notes]]
-
-If you are running the "regular" version of SAS, click on the icon and here's an image of what the opening screen looks like. SAS uses a multi-window format. The layout is a bit chaotic. I usually close some windows and re-arrange others. For the benefit of this presentation, I am going to resize everything, close some of the windows, and maximize the one window of greatest importance, the program editor window.
-
-I want to show how to use SAS. I had the screen resolution too high. It is now 800 by 600 and I think it is like going back.
-
-I like to get rid of a couple of windows and use tile vertical for the rest.
-
-Take baby steps. If you can't run this program, talk to me face-to-face.
-
-You should try typing in the program like I am doing. It helps.
-
-I like to put lots of blank lines in.
-
-Normally you would use a two part name. Not here. This is a simple throw-away example, so it can use a one part name. That means it disappears.
-
-Here is where we type the data. At the end you put in another run statement.
-
-This is bad form. Normally you put the data in a separate file.
-
-I like the obs option a lot.
-
-I'll put in a title as well.
-
-I'm going to indent a bit less.
-
-The thing I always worry about is leaving out a semicolon.
-
-There is no autosave feature.
-
-SAS uses a stupid default 9.4. If you are using a network computer, you want to use a network folder, typically the Q drive.
-
-I don't do this, but do what I preach, not what I do.
-
-I'm going to create a new folder. I can't decide on a name. Am I indecisive? I want to set up a logical directory structure, but I also want it to be reasonably flat. I tend to save things in a folder called "source" (SRC).
-
-The run guy is a guy who looks like he is running.
-
-You see some diagnostic information. Work is a scratch. We are not using this again. Three observations, but then one because we said obs=1.
-
-There is the output. SAS by default centers things, and it doesn't work well with 800 by 600.
-
-Try this yourself. It's a baby step. If it works then you can take more baby steps.
-
-</div>
-
-### SAS program editor (1 of 2)
-
-![Maximized view of empty SAS program editor window](../images/program-editor.png)
-
-
-<div class="notes">[[Speaker notes]]
-
-This is the program editor window. You type in your program in this window, or read an existing program from another window. The other two remaining tabs, the log window, and the output window, are also important.
-
-</div>
-
-### SAS program editor (2 of 2)
-
-![Program editor window with simple SAS program](../images/test-program1.png)
+![Program editor window with simple SAS program](../images/m01-basic-program.png)
 
 
 <div class="notes">[[Speaker notes]]
@@ -267,32 +331,78 @@ If you are using the computer labs, you need to save things on a network folder.
 
 </div>
 
-### SAS Test program
+### SAS Test program (1 of 2)
 
 ```
-data test_example;
+data small_example;
  input x y;
- cards;
+ datalines;
 1 2
 2 4
 3 6
 ;
+```
 
-proc means data=test_example;
+<div class="notes">[[Speaker notes]]
+
+Here is the program I want you to type in.
+
+I like to put lots of blank lines in.
+
+The data statement creates a dataset with the name "small_example". Normally you would use a two part name. Not here. This is a simple throw-away example, so it can use a one part name. That means it disappears once the program is done. We'll explain this further in a later video.
+
+The input statement tells SAS to expect two variables and assigns them the names x and y.
+
+The datalines statement tells SAS to read the data directly below this line. This is NOT a recommended practice. You should normally keep your data separate from your code. I am doing this only for the sake of simplicity. You will see in just a minute how to handle data that comes in a separate file.
+
+The three lines of data follow. A single semicolon tells SAS that this is the end of the data.
+
+</div>
+
+### SAS Test program (2 of 2)
+
+```
+proc print
+    data=small_example;
   var x y;
-  title "Descriptive statistics";
+  title1 "First row of data";
 run;
 ```
 
 <div class="notes">[[Speaker notes]]
 
-After you type this program in, click on FILE | SAVE and store your program somewhere safe.
+The print procedure will print part or all of a dataset. 
+
+You specify the name of the dataset with the data= option. The options obs=1 tells SAS to print only the first row. I like the obs option a lot.
+
+The title1 statement prints a descriptive title on the first line of output.
+
+The run statement tells SAS that there is no more information associated with this procedure.
+
+The thing I always worry about is leaving out a semicolon. Please watch these closely.
+
+Be careful and back up your programs regularly. There is no autosave feature in SAS. 
+
+When you finish the program, save it in the src directory. Then click on the run button. The run button is a guy who looks like he is running.
+
+Try this yourself. It's a baby step. If it works then you can take more baby steps.
 
 </div>
 
-### SAS log window (1 of 2)
+### SAS results window (1 of 2)
 
-<!---![Maximized view of SAS log window](../images/log-window1.png)--->
+![Screenshot of results window](../images/m01-output-window.png)
+
+
+<div class="notes">[[Speaker notes]]
+
+When the program runs, your output appears in the results window.
+
+</div>
+
+### SAS log window (1 of 4)
+
+![Screenshot of log window](../images/m01-log-window-01.png)
 
 
 <div class="notes">[[Speaker notes]]
@@ -301,18 +411,19 @@ The font here is a bit small, but notice that there are no red messages indicati
 
 </div>
 
-### SAS log window (2 of 2)
+### SAS log window (2 of 4)
 
-<!---![Maximized view of SAS log window, second page](../images/log-window2.png)--->
+![Screenshot of log window](../images/m01-log-window-02.png)
 
 
 <div class="notes">[[Speaker notes]]
 
-Always start looking for error messages at the top. The very first error or warning message is most likely to be helpful, and later errors/warnings are often of less value.
+Always start looking from the top, and scroll slowly down to the bottom. No warnings or error messages here either.
 
 </div>
 
-### Log messages (1 of 2)
+### SAS log window (3 of 4)
+
 
 ```
 1    data test_example;
@@ -320,9 +431,6 @@ Always start looking for error messages at the top. The very first error or warn
 3     cards;
 
 NOTE: The data set WORK.TEST_EXAMPLE has 3 observations and 2 variables.
-NOTE: DATA statement used (Total process time):
-      real time           0.51 seconds
-      cpu time            0.04 seconds
 ```
 
 <div class="notes">[[Speaker notes]]
@@ -332,19 +440,16 @@ Always watch the log to see that you have read in the proper number of observati
 </div>
 
 
-### Log messages (2 of 2)
+### Log messages (4 of 4)
 
 ```
-9    proc means data=test_example;
-10     var x y;
-11     title "Descriptive statistics";
-12   run;
-
-NOTE: Writing HTML Body file: sashtml.htm
-NOTE: There were 3 observations read from the data set WORK.TEST_EXAMPLE.
-NOTE: PROCEDURE MEANS used (Total process time):
-      real time           1.72 seconds
-      cpu time            0.20 seconds
+ 75         ;
+ 76         proc print
+ 77             data=small_example(obs=1);
+ 78         title "First row of data";
+ 79         run;
+ 
+NOTE: There were 1 observations read from the data set WORK.SMALL_EXAMPLE.
 ```
 
 <div class="notes">[[Speaker notes]]
@@ -363,18 +468,7 @@ SAS has several options for storing output.
 
 <div class="notes">[[Speaker notes]]
 
-Output is tricky. I want to talk in more detail later about this, but you can take the output and save it. There are several ways to do this. If you already have output, click on the CREATE LISTING option box to send the output to the output window. Click on the CREATE HTML option box to send the output to an html file. Click on the BROWSE button to select a default folder for your html file.
-
-</div>
-
-
-### SAS output window
-
-![Maximized view of default SAS output](../images/output-window.png)
-
-<div class="notes">[[Speaker notes]]
-
-Here's what the output window looks like. Notice that SAS uses a monospaced font here.
+Output is tricky. I want to talk in more detail later about this, but you can take the output and save it several different ways.
 
 </div>
 
@@ -382,6 +476,15 @@ Here's what the output window looks like. Notice that SAS uses a monospaced font
 
 + What have you learned
   + Your first SAS program
++ What's coming next
+  + Live demonstration (1 of 5)
+  
+### Live demonstartion (1 of 5)
+
+### Break #4
+
++ What have you learned
+  + Live demonstration (1 of 5)
 + What's coming next
   + History of SAS
 
@@ -466,40 +569,19 @@ SAS Viya is a cloud based platform with many advanced visualization and machine 
 
 </div>
 
-### Break #4
+### Break #6
 
 + What have you learned
   + History of SAS
 + What's coming next
-  +  Directory structure/Documentation header
+  +  Documentation header
+
   
-### Directory structure
-
-+ One directory for the entire class
-  + Possibly one directory for each module
-+ Subdirectory structure
-  + src
-  + results
-  + data
-  + others?
-    + images
-    + doc
-    
-<div class="notes">
-
-Make sure you store things consistently. This part of the requirements for this class.
-
-Store all your programs for this calss in a single directory. You can call it "sas" or "5507" or anything you like. Some people may prefer to create a separate directory for each module in this class. That's fine also.
-
-Most importantly, create three subdirectories, src, results, and data. Store your programs in src, your output in results and your raw and intermediate datasets in data. You may wish to create other subdirectories, such an images folder for any graphs you produce, a doc folder for any documentation you collect, but the three imporant subdirectory folders are src, results, and data.
-
-</div>
-
-### Basic program, part 1
+### Documentation header
 
 ```{r}
-tx <- readLines("5507-01-simon-basic-program.sas")
-tx %>% 
+tx <- readLines("5507-01-simon-documentation-header.sas")
+tx[1:5] %>%
   paste0(collapse="\n") -> tx1  
 ```
 
@@ -509,36 +591,28 @@ tx %>%
 
 <div class="notes">
 
-Here is the basic program I want you to run. 
-
-The data statement creates a dataset with the name "small_example".
-
-The input statement tells SAS to expect two variables and assigns them the names x and y.
-
-The datalines statement tells SAS to read the data directly below this line. This is NOT a recommended practice. You should normally keep your data separate from your code. I am doing this only for the sake of simplicity. You will see in just a minute how to handle data that comes in a separate file.
-
-The three lines of data follow. A single semicolon tells SAS that this is the end of the data.
-
-The print procedure will print part or all of a dataset. 
-
-You specify the name of the dataset with the data= option. The options obs=1 tells SAS to print only the first row.
-
-The title1 statement prints a descriptive title on the first line of output.
-
-The run statement tells SAS that there is no more information associated with this procedure.
+Here is a documentation header. It belongs on the top of every SAS program that you run.
 
 </div>
 
-### Break #5
+### Break #6
 
 + What have you learned
-  + How to read a small dataset
-  + How to print a small dataset
+  +  Documentation header
++ What's coming next
+  + Live demonstration (2 of 5)
 
+
+### Live demonstration (2 of 5)
+
+### Break #7
+
++ What have you learned
+  + Live demonstration (2 of 5)
 + What's coming next
   + Permanent storage
 
-### Permanent storage, part 1
+### Permanent storage (1 of 4)
 
 ```{r}
 tx <- readLines("5507-01-simon-permanent-storage.sas")
@@ -559,10 +633,37 @@ Here is the documentation header. You should include a documentation header with
 
 </div>
 
-### Permanent storage, part 2
+### Permanent storage (2 of 4)
 
 ```{r}
-tx %>% str_which("^%let") -> i1
+tx %>% str_which("^libname") -> i1
+tx %>% str_which("^libname") -> i2
+tx %>%
+  extract(i1:i2) %>%
+  paste0(collapse="\n") -> tx2  
+```
+
+
+```{}
+`r tx2`
+```
+
+<div class="notes">
+
+Notice the top line in this section. This is the libname statement. It tells SAS that you want to establish a permanent storage location at ../data. The ../data tells the computer system to go one level closer to the root directory, and then slide into the data subdirectory.
+
+You assign a brief name (no more than eight characters!) to this location. In my program, I use the name "perm" but anything is fine here.
+
+Then you prefix the dataset name simple_example with the libname location and a dot. This is called a two part name by SAS. The first part gives the permanent location folder and the second part gives the file name.
+
+Once you establish a two-part name for a dataset, you assure that it is stored for later re-use.
+
+</div>
+
+### Permanent storage (3 of 4)
+
+```{r}
+tx %>% str_which("^data ") -> i1
 tx %>% str_which("^;") -> i2
 tx %>%
   extract(i1:i2) %>%
@@ -586,7 +687,7 @@ Once you establish a two-part name for a dataset, you assure that it is stored f
 
 </div>
 
-### Permanent storage, part 3
+### Permanent storage (4 of 4)
 
 ```{r}
 tx %>% str_which("proc") -> i3
@@ -631,7 +732,7 @@ First, let's show the documentation header.
 ### Re-using data in permanent storage, part 2
 
 ```{r}
-tx %>% str_which("^%let") -> i1
+tx %>% str_which("^libname") -> i1
 tx %>% str_which("run;") -> i2
 tx %>%
   extract(i1:i2) %>%
@@ -649,15 +750,23 @@ Notice that there is no data step in this program, you start with a libname stat
 
 </div>
 
-### Break #6
+### Break #8
 
 + What have you learned
   + Permanent storage
-  
 + What's coming next
-  + Saving your output
+  + Live demonstration (3 of 5)
 
-### Saving output as pdf, part 1
+### Live demonsration (3 of 5)
+
+### Break #9
+
++ What have you learned
+  + Live demonstration (3 of 5)
++ What's coming next
+  + Saving output as pdf
+
+### Saving output as pdf (1 of 4)
 
 ```{r}
 tx <- readLines("5507-01-simon-save-output.sas")
@@ -678,10 +787,31 @@ Here is the documentation header.
 
 </div>
 
-### Saving output as pdf, part 2
+### Saving output as pdf (2 of 4)
 
 ```{r}
-tx %>% str_which("^%let") -> i1
+tx %>% str_which("^libname") -> i1
+tx %>% str_which("output.pdf") -> i2
+tx %>%
+  extract(i1:i2) %>%
+  paste0(collapse="\n") -> tx2  
+```
+
+
+```{}
+`r tx2`
+```
+
+<div class="notes">
+
+The ods statement should be placed near the top of the code, certainly before any SAS procedure that produces output.
+
+</div>
+
+### Saving output as pdf (3 of 4)
+
+```{r}
+tx %>% str_which("^data ") -> i1
 tx %>% str_which("^;") -> i2
 tx %>%
   extract(i1:i2) %>%
@@ -699,7 +829,7 @@ The ods statement should be placed near the top of the code, certainly before an
 
 </div>
 
-### Saving output as pdf, part 3
+### Saving output as pdf (4 of 4)
 
 ```{r}
 tx %>% str_which("proc") -> i3
@@ -720,18 +850,26 @@ Near the bottom, you turn off the output. Place this AFTER the last SAS procedur
 
 </div>
 
-### Break #7
+### Break #10
 
 + What have you learned
-  + Saving your output
+  + Saving output as pdf
++ What's coming next
+  + Live demonstration (4 of 5)
   
+### Live demonstration (4 of 5)
+
+### Break #11
+
++ What have you learned
+  + Live demonstration (4 of 5)
 + What's coming next
   + Getting data from a file
-
-### Reading data from a file, part 1
+  
+### Reading data from a file (1 of 4)
 
 ```{r}
-tx <- readLines("5507-01-simon-input-text.sas")
+tx <- readLines("5507-01-simon-read-data.sas")
 tx %>% 
   str_subset(fixed("*")) %>%
   paste0(collapse="\n") -> tx1  
@@ -747,13 +885,13 @@ It is a very basic principle of good computing practices that you keep your data
 
 </div>
 
-### Reading data from a file, part 2
+### Reading data from a file (2 of 4)
 
 ```{r}
-tx %>% str_which("^%let") -> i1
-tx %>% str_which("input x y;") -> i2
+tx %>% str_which("^libname") -> i1
+tx %>% str_which("data.pdf") -> i2
 tx %>%
-  extract(i1:(i2+1)) %>%
+  extract(i1:i2) %>%
   paste0(collapse="\n") -> tx2  
 ```
 
@@ -768,19 +906,40 @@ The filename statement tells SAS where a particular dataset is stored: both the 
 
 </div>
 
-### Reading data from a file, part 3
+### Reading data from a file (3 of 4)
 
 ```{r}
-tx %>% str_which("proc") -> i3
-tx %>% str_which("close;") -> i4
+tx %>% str_which("^data ") -> i1
+tx %>% str_which("input x y") -> i2
 tx %>%
-  extract(i3:i4) %>%
+  extract(i1:(i2+1)) %>%
   paste0(collapse="\n") -> tx3  
 ```
 
 
 ```{}
 `r tx3`
+```
+
+<div class="notes">
+
+The filename statement tells SAS where a particular dataset is stored: both the path and the name of the file. It associates that path and filename with a variable that you refer to using the infile statement.
+
+</div>
+
+### Reading data from a file (4 of 4)
+
+```{r}
+tx %>% str_which("proc") -> i3
+tx %>% str_which("close;") -> i4
+tx %>%
+  extract(i3:i4) %>%
+  paste0(collapse="\n") -> tx4  
+```
+
+
+```{}
+`r tx4`
 ```
 
 <div class="notes">
@@ -808,6 +967,15 @@ This is what your data file looks like. It is just six numbers arranged in a gri
 You will see many variations on the layout of data, and SAS can handle just about any variation. You will see how to handle many of those variations in an upcoming module.
 
 </div>
+
+### Break #12
+
++ What have you learned
+  + Getting data from a file
++ What's coming next
+  + Live demonstration (5 of 5)
+  
+### Live demonstration (5 of 5)
 
 ### Summary
 + What have you learned?
